--- a/src/assets/scss/coding.scss
+++ b/src/assets/scss/coding.scss
@@ -18,7 +18,6 @@ body {
 .coding-wrapper {
     background-image: linear-gradient(to bottom, #263f5df7 10%, #163355f7 90%),
         url("../images/background/dark_background.jpg");
-    width: 100vw;
     height: 100vh;
     .title-wrapper {
         display: block; /* Make the links appear below each other instead of side-by-side */
@@ -78,12 +77,9 @@ body {
     background-color: rgba(255, 255, 255, 0.1);
 }
 
-.table-header {
-    border-top-style: hidden !important;
-}
-
 .table th {
     border: rgba(245, 204, 124, 1) solid 2px !important;
+    border-top-style: hidden !important;
     border-left-style: hidden !important;
     border-right-style: hidden !important;
 }
@@ -97,7 +93,28 @@ body {
 .table-container {
     width: 80vw;
     height: 60vh;
+    max-height: 95vh;
+    max-width: 95%;
     overflow-y: scroll;
-    overflow-x: hidden;
+    overflow-x: hide;
     font-size: calc(13px + (16 - 13) * ((100vw - 600px) / (1600 - 600)));
+}
+
+.table-container::-webkit-scrollbar {
+    width: 2px;
+    background-color: rgba(255, 255, 255, 0.1);
+    visibility: hidden;
+}
+
+.table-container::-webkit-scrollbar-thumb {
+    background-color: rgba(241, 244, 248, 0.4);
+    visibility: hidden;
+}
+
+.table-container:hover::-webkit-scrollbar-thumb {
+    visibility: visible;
+}
+
+.table-container:hover::-webkit-scrollbar {
+    visibility: visible;
 }
