--- a/src/assets/scss/InterestsBar.scss
+++ b/src/assets/scss/InterestsBar.scss
@@ -2,20 +2,29 @@
 
 //Desktop Styles
 
-.interest-item {
+.interest-item-left {
     margin: 3vh auto;
     width: 60vw;
     background-color: rgba(0, 0, 0, 0);
     border: 0px;
     overflow: hidden;
+    left: 3%;
 }
 
-.interest-item-body-left {
+.interest-item-right {
+    margin: 3vh auto;
+    width: 60vw;
+    background-color: rgba(0, 0, 0, 0);
+    border: 0px;
+    overflow: hidden;
+    left: 2%;
+}
+
+.interest-item-body {
     background-color: #0b1d24;
     border: 4px solid #f5cc7c;
     border-radius: 30px;
     color: #dfe3e8;
-    margin-left: -5%;
 }
 
 .interest-item-image-left {
@@ -27,13 +36,7 @@
     border: 4px solid #dfe3e8;
     border-radius: 30px;
     z-index: 1;
-}
-
-.interest-item-body-right {
-    background-color: #0b1d24;
-    border: 4px solid #f5cc7c;
-    border-radius: 30px;
-    color: #dfe3e8;
+    left: -3%;
 }
 
 .interest-item-image-right {
@@ -45,23 +48,7 @@
     border: 4px solid #dfe3e8;
     border-radius: 30px;
     z-index: 1;
-    margin-left: -90px;
-}
-
-.interest-item-ipad {
-    margin: 3vh auto;
-    width: 80vw;
-    background-color: rgba(0, 0, 0, 0);
-    border: 0px;
-    overflow: hidden;
-}
-
-.interest-item-body-ipad {
-    background-color: #0b1d24;
-    border: 4px solid #f5cc7c;
-    border-radius: 30px;
-    color: #dfe3e8;
-    margin-left: -5%;
+    right: -3%;
 }
 
 .interest-item-title {
@@ -76,20 +63,49 @@
 
 //Mobile styles
 
-.interest-item-mobile {
-    margin: 2vh auto;
+.interest-item-left-mobile {
+    margin: 3vh auto;
     width: 100vw;
     background-color: rgba(0, 0, 0, 0);
     border: 0px;
     overflow: hidden;
+    left: -3%;
 }
 
-.interest-item-body-left-mobile {
+.interest-item-right-mobile {
+    margin: 3vh auto;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, 0);
+    border: 0px;
+    overflow: hidden;
+    left: -6%;
+}
+
+@media screen and (min-width: 500px) {
+    .interest-item-left-mobile {
+        left: 0%;
+    }
+
+    .interest-item-right-mobile {
+        left: -3%;
+    }
+}
+
+@media screen and (max-height: 400px) {
+    .interest-item-left-mobile {
+        margin: 4vh auto;
+    }
+
+    .interest-item-right-mobile {
+        margin: 4vh auto;
+    }
+}
+
+.interest-item-body-mobile {
     background-color: #0b1d24;
     border: 4px solid #f5cc7c;
     border-radius: 20px;
     color: #dfe3e8;
-    margin-left: -3%;
     height: 100%;
 }
 
@@ -102,13 +118,7 @@
     border: 4px solid #dfe3e8;
     border-radius: 15px;
     z-index: 1;
-}
-
-.interest-item-body-right-mobile {
-    background-color: #0b1d24;
-    border: 4px solid #f5cc7c;
-    border-radius: 20px;
-    color: #dfe3e8;
+    left: -3%;
 }
 
 .interest-item-image-right-mobile {
@@ -120,105 +130,14 @@
     border: 4px solid #dfe3e8;
     border-radius: 15px;
     z-index: 1;
-    margin-left: -210%;
+    right: -3%;
 }
 
 .interest-item-title-mobile {
     font-family: Poppins, sans-serif;
-    font-size: 14px;
+    font-size: calc(14px + (26 - 14) * ((100vw - 600px) / (1600 - 600)));
 }
 
-@media all and(min-width:1500px) {
-    .interest-item {
-        margin: 2vh auto;
-        height: 10vh;
-        width: 80vw;
-        background-color: rgba(0, 0, 0, 0);
-        border: 0px;
-        overflow: hidden;
-    }
-
-    .interest-item-body-left {
-        background-color: #0b1d24;
-        border: 4px solid #f5cc7c;
-        border-radius: 30px;
-        color: #dfe3e8;
-        margin-left: -5%;
-    }
-
-    .interest-item-image-left {
-        position: absolute;
-        height: 80%;
-        width: auto;
-        top: 50%;
-        transform: translateY(-50%);
-        border: 4px solid #dfe3e8;
-        border-radius: 30px;
-        z-index: 1;
-        margin-left: 2vw;
-    }
-
-    .interest-item-body-right {
-        background-color: #0b1d24;
-        border: 4px solid #f5cc7c;
-        border-radius: 30px;
-        color: #dfe3e8;
-        margin-left: 2vw;
-    }
-
-    .interest-item-image-right {
-        position: absolute;
-        height: 80%;
-        width: auto;
-        top: 50%;
-        transform: translateY(-50%);
-        border: 4px solid #dfe3e8;
-        border-radius: 30px;
-        z-index: 1;
-        margin-left: -1vw;
-    }
-
-    .interest-item-title {
-        font-family: Poppins, sans-serif;
-        font-size: 22px;
-    }
-
-    .interest-item-text {
-        font-family: Josefin Sans, sans-serif;
-        font-size: 16px;
-    }
+.interest-item-body:hover {
+    background-color: rgba(0, 0, 0, 0.7);
 }
-
-// .interest-item {
-//   cursor: pointer;
-//   position: relative;
-//   display: block;
-//   max-width: 25rem;
-//   border-radius: 0.5rem;
-//   overflow: hidden;
-// }
-// .interest-item .interest-item-caption {
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   transition: all 0.4s ease-in-out;
-//   opacity: 0;
-//   background-color: black;
-// }
-
-// .interest-item-caption {
-//   padding: 10px;
-// }
-
-// .interest-item .interest-item-caption:hover {
-//   opacity: 0.8;
-// }
-
-// .interest-item .interest-item-caption .interest-item-caption-content {
-//   font-size: 1.5rem;
-// }
-
-// .interest-title {
-//   margin-top: 20px;
-//   display: block;
-// }
