fixed some mobile aesthetics

--- a/src/assets/scss/CustomNavBar.scss
+++ b/src/assets/scss/CustomNavBar.scss
@@ -80,6 +80,6 @@ a:hover {
     }
 
     #responsive-navbar-nav {
-        background-color: rgba(54, 76, 99, 0.5);
+        background-color: #364c6399;
     }
 }
