--- a/src/assets/scss/Timeline.scss
+++ b/src/assets/scss/Timeline.scss
@@ -46,7 +46,7 @@
 
 .timeline-container-mobile {
     margin: 40px auto;
-    padding-left: 50px;
+    width: 80%;
     font-family: Josefin Sans;
     overflow: hidden;
     a {
