--- a/src/assets/scss/coding.scss
+++ b/src/assets/scss/coding.scss
@@ -64,7 +64,7 @@
 }
 
 .back-text {
-    color: #dfe3e8 !important;
+    color: #dfe3e8;
     font-family: Poppins, sans-serif;
     font-size: calc(
         14px + (18 - 14) * ((100vw - 600px) / (1600 - 600))
@@ -75,6 +75,12 @@
 @media all and(min-width:800px) {
     .custom-nav-link-coding {
         padding-left: 10vw;
+    }
+}
+
+.custom-nav-link-coding {
+    h4:hover {
+        color: #99a0a7;
     }
 }
 
